spacing fixed

--- a/css/faq.css
+++ b/css/faq.css
@@ -2,7 +2,7 @@
     flex-direction: column;
     display: flex;
 }
-.body-section {
+.faq-body-section {
     width: 80vw;
     padding-top: 2rem;
     padding-bottom: 2rem;
