--- a/css/footer.css
+++ b/css/footer.css
@@ -1,181 +1,129 @@
-@media screen and (max-width: 720px) {
- 
-    .container_f1 img {
-        padding: 0em;
-        padding-left: 0.5em;
-    }
-    .container_f1 #hc {
-        display: inline-block;
-        padding: 0.35em;
-        margin-bottom: 0.4em;
-        font-size: 34px;
-    }
-    .socials li {
-        display: inline-block;
-        padding: 0.5em;
-    }
-    .col2 {
-        padding: 0.5em;
-        margin: 0.5em;
-    }
-    
-    .col1 {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-    }
-  
-    footer > ul.container {
-        flex-direction: column-reverse;
-    }
 
-    .container_f1 {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+footer {
 
-    .socials {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    footer > ul.container > .col1 {
-        width: 90%;
-    }
+    background-color: #272121;
 }
 
-img.pink_yellow{
-    width: 100%;  
-    /* height:10%; */
-    /* position: relative; */
-    /* margin-left:68%; */
-    margin-right:5%;
-    margin-top:4%;
-    margin-bottom: -2%;
-  }  
-
-
-
-.footer {
-    /* display: flex;
-    flex-direction: column; */
-    /* background: var(--yellow) !important; */
-    background-color: palevioletred !important;
-}
-.socials ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-.footer ul {
-    margin: 0;
-    padding: 0;
-}
-
-.footer-icons {
-    width: 25%;
-}
-
-footer-links {
-    width: 75%;
-}
-@media screen and (max-aspect-ratio: 1/1) {
-   
-    .footer {
-        flex-direction: column !important;
-    }
-    .footer-icons {
-        width: 100%;
-    }
-    .footer-links {
-        width: 100%;
-        align-items: flex-start !important;
-    }
+footer li {
+    list-style-type: none;
 }
 
 footer ul.container {
     padding: 0;
-    margin-bottom: 0;
+    margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-footer {
-    display: block;
-    width: 100% !important;
-    height: auto;
-    left: 0px;
-    background-color: pink;
+.footer-body-section {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
-.container li {
-    display: inline-block;
-}
-
-.col1 {
-    width: 75%;
+.footer-socials-wrapper {
+    width: 50%;
     margin: 0;
     padding: 0;
 }
 
-.container_f1 img {
+.footer-banner img {
     padding: 1em;
 }
 
-.container_f1 {
+.footer-banner {
     font-family: roboto;
     font-weight: 900;
-    color: #fff;
+    display: flex;
 }
 
-.container_f1 #hc {
+.footer-banner #hc {
     display: inline-block;
     padding: 0.5em;
-    font-size: 46px;
+    font-size: 2rem;
     top: 0;
 }
 
-.socials ul {
+.footer-socials ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-.socials li {
+.footer-socials li {
     display: inline-block;
     padding: 1.3em;
 }
 
-.links {
+.footer-links {
     display: inline-block;
     font-family: roboto;
     font-weight: 500;
-    font-size: 24px;
-    color: #fff;
+    font-size: 1rem;
 }
 
-
-.col2 {
-    margin: 0em;
-    padding: 0em;
+.footer-links {
+    padding: 1em;
 }
 
-.links .comm {
+.footer-links .comm {
     padding: 0.1em;
 }
 
-.links .outro {
-    font-size: 18px;
+.footer-links .outro {
+    font-size: 0.8rem;
     font-weight: 300;
     padding-top: 0.5em;
 }
 
-
-.links a {
+.footer-links a {
     color: inherit;
-    text-decoration: none;
+}
+
+
+@media screen and (max-aspect-ratio: 1/1) {
+    #about {
+        background-size: 0;
+    }
+    .footer-banner img {
+        padding: 0em;
+        padding-left: 0.5em;
+    }
+    .footer-banner #hc {
+        display: inline-block;
+        padding: 0.35em;
+        margin-bottom: 0.4em;
+        font-size: 34px;
+    }
+    .footer-socials li {
+        display: inline-block;
+        padding: 0.5em;
+    }
+    .footer-links {
+        padding: 0.5em;
+        margin: 0.5em;
+    }
+    .footer-socials-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin-bottom: none;
+    }
+    footer>ul.container {
+        flex-direction: column-reverse;
+    }
+    .footer-banner {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .footer-socials {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    footer>ul.container>.footer-socials-wrapper {
+        width: 90%;
+    }
 }
