--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
   font-weight: 400;
 }
 
-* {
+ body{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
